# vacmon

./: CMakeLists.txt  README.md
src/: hooks.cpp  hooks.hpp  logger.cpp  logger.hpp  main.cpp  utils.cpp  utils.hpp
src/steam/: client_module_manager.cpp  client_module_manager.hpp
